--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "openai": "^4.85.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.2"
+    "react-scroll": "^1.9.2",
+    "react-spinners": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
