Home Screen Responsiveness

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
+    "hamburger-react": "^2.5.2",
     "openai": "^4.85.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
